fix wysiwyg spacing

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -53,7 +53,7 @@
 			h4,
 			h5,
 			h6 {
-				@apply mt-4 first:mt-0 last:mb-0;
+				@apply mt-8 first:mt-0 last:mb-0;
 			}
 
 			ol,
@@ -138,10 +138,14 @@
 
 		--destructive: 0 84.2% 60.2%;
 		--destructive-foreground: 360 100% 88%;
+
 		&.section {
 			& + & {
 				@apply pt-0;
 			}
+		}
+		& + & {
+			@apply pt-0;
 		}
 	}
 	.theme--image,
